--- a/backend/foodgram/Dockerfile
+++ b/backend/foodgram/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY requirements.txt /app
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
 COPY . .
-CMD ["python3", "manage.py", "runserver", "0:8000"]
+CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000"]
