--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
-    listen 80;
-    server_name 84.201.143.2 logick7.ddns.net;
     server_tokens off;
+    listen 80;
+    server_name 84.201.143.2 pepegas.ddns.net;
 
     location /static/admin {
         autoindex on;
@@ -43,4 +43,3 @@ server {
       }
 
 }
-
