--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -57,8 +57,8 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
-            docker-compose stop
-            docker-compose rm backend
+            docker compose stop
+            docker compose rm backend
             docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
             rm .env
             touch .env
@@ -69,11 +69,11 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-            docker-compose up -d
-            docker-compose exec -T backend python manage.py makemigrations
-            docker-compose exec -T backend python manage.py migrate
-            docker-compose exec -T backend python manage.py collectstatic --noinput
-            docker-compose exec -T backend python manage.py load_data_csv
+            docker compose up -d
+            docker compose exec -T backend python manage.py makemigrations
+            docker compose exec -T backend python manage.py migrate
+            docker compose exec -T backend python manage.py collectstatic --noinput
+            docker compose exec -T backend python manage.py load_data_csv
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
