--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     server_tokens off;
     listen 80;
-    server_name 51.250.21.59;
+    server_name 84.201.143.2 pepegas.ddns.net;
 
     location /media/ {
         autoindex on;
