--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -59,7 +59,8 @@ jobs:
         script: |
             docker compose stop
             docker compose rm backend
-            docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
             rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
