--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,7 +8,7 @@ server {
         root /usr/share/nginx/html/;
     }
 
-    location /static_backend/ {
+    location /static/ {
         autoindex on;
         root /usr/share/nginx/html/;
     }
@@ -27,7 +27,7 @@ server {
     }
 
     location /admin/ {
-        proxy_pass http://backend:8000/admin/;
+        proxy_pass http://backend:8000;
     }
 
     location / {
