--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -61,15 +61,15 @@ jobs:
             docker compose rm backend
             docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
             docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
-            rm .env
-            touch .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-            echo POSTGRES_DB=${{ secrets.POSTGRES_DB }} >> .env
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            echo PASSPHRASE=${{ secrets.PASSPHRASE }} >> .env
+            rm .postgresql
+            touch .postgresql
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .postgresql
+            echo POSTGRES_DB=${{ secrets.POSTGRES_DB }} > .postgresql
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .postgresql
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .postgresql
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .postgresql
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .postgresql
+            echo PASSPHRASE=${{ secrets.PASSPHRASE }} >> .postgresql
             docker compose up -d
             docker compose exec -T backend python manage.py makemigrations
             docker compose exec -T backend python manage.py migrate
