--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - db:/var/lib/postgresql/data/
     env_file:
-      - ./.env
+      - ./.postgresql
   backend:
     image: iskanderrrr/foodgram_backend:latest
     expose:
