--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -64,7 +64,7 @@ jobs:
             rm .postgresql
             touch .postgresql
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .postgresql
-            echo POSTGRES_DB=${{ secrets.POSTGRES_DB }} > .postgresql
+            echo POSTGRES_DB=${{ secrets.POSTGRES_DB }} >> .postgresql
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .postgresql
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .postgresql
             echo DB_HOST=${{ secrets.DB_HOST }} >> .postgresql
