--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     depends_on:
       - db
     env_file:
-      - ./.env
+      - ./.postgresql
 
   frontend:
     image: iskanderrrr/foodgram_frontend:latest
