--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 atomicwrites==1.4.1
 attrs==21.4.0
+Brotli==1.0.9
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.0.12
@@ -8,6 +9,7 @@ colorama==0.4.5
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==37.0.4
+cssselect2==0.7.0
 defusedxml==0.7.1
 Django==2.2.16
 django-filter==21.1
@@ -17,7 +19,10 @@ djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
 drf-extra-fields==3.4.0
 flake8==5.0.4
+fonttools==4.38.0
+gobject==0.1.0
 gunicorn==20.0.4
+html5lib==1.1
 idna==3.3
 importlib-metadata==1.7.0
 iniconfig==1.1.1
@@ -33,9 +38,11 @@ psycopg2-binary==2.8.6
 py==1.11.0
 pycodestyle==2.9.1
 pycparser==2.21
+pydyf==0.6.0
 pyflakes==2.5.0
 PyJWT==2.1.0
 pyparsing==3.0.9
+pyphen==0.14.0
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
@@ -49,8 +56,12 @@ six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.2
+tinycss2==1.2.1
 toml==0.10.2
-typing_extensions==4.3.0
+typing-extensions==4.3.0
 uritemplate==4.1.1
 urllib3==1.26.10
+weasyprint==58.1
+webencodings==0.5.1
 zipp==3.8.1
+zopfli==0.2.2
